# adl-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust-clippy.yml
adl/: Cargo.toml
adl-example/: Cargo.toml
adl-example/src/: main.rs
adl-sys/: .gitignore  Cargo.toml
adl-sys/include/: wchar_shim.h
adl-sys/src/: bindings.rs  lib.rs
adl/src/: lib.rs
adl/src/adapter/: chip.rs  info.rs  memory.rs  mod.rs  types.rs
adl/src/context/: mod.rs
adl/src/overdrive/: mod.rs  odn.rs
adl/src/performance/: mod.rs  pm.rs
src/: lib.rs
sys/: Cargo.toml  build.rs
sys/include/: adl_structures.h  stdbool_shim.h
sys/src/: bindings.rs  lib.rs
